--- a/home.html
+++ b/home.html
@@ -4,26 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
     <style>
-
         * {
             padding: 0px;
             margin: 0px;
         }
+
         body {
             width: 100vw;
             height: 100vh;
-            background-image: url("imagens/tela-home.jpg");
-            background-repeat: no-repeat;
-            background-color: black;
-            background-position: top center;
+            background: black url('imagens/tela-home.jpg') no-repeat top center;
             background-size: cover;
-            
         }
     </style>
 </head>
 <body>
-    
 </body>
 </html>
