--- a/git.html
+++ b/git.html
@@ -41,6 +41,6 @@
 </head>
 <body>
     <img src="imagens/tela-github.jpg" alt="">
-    <a href="">ACESSE</a>
+    <a href="https://github.com/gustavoguanabara" target="_blank">ACESSE</a>
 </body>
 </html>
