--- a/yt.html
+++ b/yt.html
@@ -47,6 +47,6 @@
 </head>
 <body>
     <img src="imagens/tela-youtube.png" alt="">
-    <a href="" target="_blank">ACESSE</a>
+    <a href="https://www.youtube.com/channel/UCrWvhVmt0Qac3HgsjQK62FQ" target="_blank">ACESSE</a>
 </body>
 </html>
