--- a/fb.html
+++ b/fb.html
@@ -40,6 +40,6 @@
 </head>
 <body>
     <img src="imagens/tela-facebook.jpg" alt="">
-    <a href="">ACESSE</a>
+    <a href="https://www.facebook.com/gustavoguanabara" target="_blank">ACESSE</a>
 </body>
 </html>
