--- a/insta.html
+++ b/insta.html
@@ -38,6 +38,6 @@
 </head>
 <body>
     <img src="imagens/tela-instagram.jpg" alt="">
-    <a href="">ACESSE</a>
+    <a href="https://www.instagram.com/gustavoguanabara/?hl=en" target="_blank">ACESSE</a>
 </body>
 </html>
